@@ -48,9 +48,11 @@ if __name__ == '__main__':
       subprocess.check_call([SERF_RESPONSE_EXE, case])
     except subprocess.CalledProcessError:
       print "ERROR: test case %s failed" % (case)
+      sys.exit(1)
 
   print "== Running the unit tests =="
   try:
     subprocess.check_call(TEST_ALL_EXE)
   except subprocess.CalledProcessError:
     print "ERROR: test(s) failed in test_all"
+    sys.exit(1)
